# KTail

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  app-img.yml  build.rs  build.sh  createAppImage.sh  createMacOsBundle.sh  createWindowsBundle.ps1  env.sh  generate-bundle.ps1  generate-macos-bundle.sh  generate-windows-bundle.ps1  run.sh  rust.yml
.github/workflows/: linux-build.yml  macos-build.yml  release.yaml  windows-build.yml
assets/: KTail.desktop
assets/MacOS/: cargo-bundle  gdk-pixbuf-query-loaders  ktail
assets/MacOS/Resources/glib-2.0/schemas/: gschemas.compiled
assets/MacOS/Resources/icons/Adwaita/: index.theme
assets/MacOS/lib/: libatk-1.0.0.dylib  libcairo-gobject.2.dylib  libcairo.2.dylib  libcrypto.1.1.dylib  libepoxy.0.dylib  libffi.7.dylib  libfontconfig.1.dylib  libfreetype.6.dylib  libfribidi.0.dylib  libgdk-3.0.dylib  libgdk_pixbuf-2.0.0.dylib  libgio-2.0.0.dylib  libglib-2.0.0.dylib  libgmodule-2.0.0.dylib  libgobject-2.0.0.dylib  libgraphite2.3.dylib  libgtksourceview-3.0.1.dylib  libharfbuzz.0.dylib  libpango-1.0.0.dylib  libpangocairo-1.0.0.dylib  libpangoft2-1.0.0.dylib  libpng.dylib  libssl.1.1.dylib
assets/MacOS/lib/gdk-pixbuf-2.0/: loaders.cache
assets/gtk-3.0/: settings.ini
assets/themes/Mint-Y-Grey/: gtk.css
assets/themes/Mint-Y-Grey/gtk-3.0/: gtk.css
config/: log4rs.yaml  settings.json
src/: cluster_list_view.rs  column_view_helper.rs  config.rs  dirs.rs  file_view.rs  highlighters.rs  kubernetes_log_reader.rs  log_data_worker.rs  log_file_reader.rs  log_overview.rs  log_stream.rs  log_text_contrast.rs  log_text_view.rs  log_view.rs  main.rs  menu.rs  model.rs  pod_list_view.rs  pod_selection.rs  pod_selector.rs  result.rs  rules.rs  search_result_view.rs  settings.rs  start.rs  toolbar.rs  util.rs  widget.rs
src/file/: file_view.rs  mod.rs  toolbar.rs  workbench.rs
src/file_view/: mod.rs  rules.rs  toolbar.rs  util.rs  workbench.rs
src/k8s_client/: kube_client.rs  kube_config.rs  mod.rs
