[package]
name = "ktail"
version = "0.3.4"
authors = ["nico.just <mail@njust.de>"]
description = "Kubernetes Log Viewer"
edition = "2018"
license = "Copyright © 2020 Nico Just"

[dependencies]
glib = "0.10.1"
gdk = "0.13.1"
encoding = "0.2.33"
sourceview = {version = "0.9.0", features = ["v3_18"]}
serde = {version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"
log4rs = "0.13.0"
log = "0.4.11"
gdk-pixbuf = {version = "0.9.0", features = ["v2_32"] }
image = { version = "0.23", default-features = false, features = ["png"] }
regex = "1.3.9"
crc = "1.8.1"
uuid = {version = "0.8.1", features = ["v4"]}
stream-cancel = "0.6.1"
glib_data_model_helper = {git = "https://github.com/njust/glib_data_model_helper.git"}
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.40"
anyhow = "1.0.37"
mime_guess = "2.0.3"
argh = "0.1.4"
futures = "0.3.13"

# k8s_client deps
reqwest = { version = "0.10", features = ["json", "native-tls", "stream"] }
bytes = "0.5.6"
openssl = "0.10.30"
url = "1.5.1"
serde_yaml = "0.7.1"
url_serde = "0.2.0"
base64 = "0.6.0"
k8s-openapi = {version = "0.7.1", features = ["v1_15"] }
dirs = "3.0.1"


[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

# Linux metadata
[package.metadata.deb]
depends = "libc6, libgtk-3-0 (>= 3.16), libgtksourceview-3.0-1"
assets = [
    ["target/release/ktail", "usr/bin/", "755"],
    ["assets/app-icon/ktail.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["assets/KTail.desktop", "usr/share/applications/", "644"],
]

# MacOS metadata
[package.metadata.bundle]
identifier="de.ktail"
icon = ["./assets/app-icon/128x128.png"]
name = "KTail"
copyright = "Copyright © 2020 Nico Just"

# Windows metadata
[package.metadata.winres]
LegalCopyright = "Copyright © 2020 Nico Just"

# always use target build-dependencies for winres so that
# it won't get pulled for non-windows OSs (saves them resources)
[target.'cfg(target_os="windows")'.build-dependencies]
# winres project
winres = {git = "https://github.com/njust/winres.git"}

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'