[package]
name = "ktail"
edition = "2021"
version = "0.4.0"
authors = ["nico.just <mail@njust.de>"]
description = "Kubernetes Log Viewer"
license = "Copyright © 2022 Nico Just"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gtk4-helper = {path = "./gtk4-helper/gtk4-helper"}
gtk4-helper = {git = "https://github.com/njust/gtk4-helper.git"}
sourceview5 = "0.2.0"
reqwest = { version = "0.11.4", features = ["json", "native-tls", "stream"] }
stream-cancel = "0.6.1"
openssl = "0.10.30"
k8s-openapi = {version = "0.7.1", features = ["v1_15"] }
serde = {version = "1.0.115", features = ["derive"]}
serde_yaml = "0.7.1"
serde_json = "1.0.57"
url = "1.5.1"
url_serde = "0.2.0"
base64 = "0.6.0"
regex = "1.5.4"
uuid = {version = "0.8.1", features = ["v4"]}
argh = "0.1.4"
tokio-stream = { version = "0.1.7" }
anyhow = "1.0.37"
dirs = "3.0.1"
bytes = "1.1.0"
futures = { version = "0.3.17", features = ["alloc"] }
once_cell = "1.8.0"
itertools = "0.10.3"
directories = "4.0.1"

chrono = "0.4.19"
plotters = "0.3.1"
plotters-cairo = {git = "https://github.com/njust/plotters-cairo.git"}

# MacOS metadata
[package.metadata.bundle]
identifier="de.ktail"
icon = ["./assets/app-icon/128x128.png"]
name = "KTail"
copyright = "Copyright © 2022 Nico Just"

# Windows metadata
[package.metadata.winres]
LegalCopyright = "Copyright © 2022 Nico Just"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = {git = "https://github.com/njust/winres.git"}

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'